margin correction on mobile S and L

--- a/css/index.css
+++ b/css/index.css
@@ -280,7 +280,7 @@ footer {
 @media only screen and (max-width: 375px) {
   .wrapper {
     gap: 20px;
-    margin: 50px 0;
+    margin: 50px auto;
     width: 95%;
     max-width: 91%;
   }
